src/options.css
:root {
  --primary-color: #f03738;
  --primary-color-light: #f98484;
  --primary-color-dark: #bc0303;
  
  --green: #16c18e;
  --green-shade-1: #14b082;
  
  --red: #c13016;
  --red-shade-1: #912511;
  
  --gray: #d6d6d6;
  --gray-shade-1: #b0b0b0;
}

* {
  box-sizing: border-box;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #f1f1f1;
  font-size: 16px;
  font-family: Roboto, system-ui, sans-serif;
  margin-top: 56px;
}

.column {
  max-width: 650px;
  margin: auto;
}

header {
  background-color: #424242;
  color: #fff;
  padding: 10px;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

header .column {
  display: flex;
  align-items: center;
  text-align: center;
}

.header .logo {
  width: 36px;
  height: auto;
  display: inline-block;
  vertical-align: middle;
}

header .title {
  display: inline-block;
  margin: 0;
  margin-left: 14px;
  font-weight: normal;
}

main {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.note {
  color: #595959;
  font-size: 13px;
}

input {
  padding: 10px 12px;
  border-radius: 3px;
  border: 1px solid #e4e4e4;
  font-size: 14px;
  font-weight: 300;
  height: 40px;
}

input:focus {
  outline: none;
  border-color: var(--green);
}

input[type='submit'],
button {
  color: #fff;
  cursor: pointer;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 12px;
  border: 0;
}

input[type='submit'] {
  background-color: var(--green);
  border-color: var(--green);
}

input[type='submit']:hover {
  background-color: var(--green-shade-1);
  border-color: var(--green-shade-1);
}

input[type='submit']:active {
  box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.3);
}

.hidden {
  display: none;
}

.stylesheets-form {
  width: 100%;
  margin-top: 30px;
}

.stylesheets-form__group {
  display: flex;
}

.stylesheets-form input[type='text'] {
  flex: 1;
  margin-right: 6px;
}

.stylesheets-form .note {
  margin-top: 10px;
}

.stylesheets-message {
  margin-top: 30px;
  letter-spacing: 0.6px;
}

.stylesheets-list {
  margin-top: 30px;
  width: 100%;
}

.stylesheet {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  padding: 10px;
  margin-top: 14px;
  background-color: #fff;
  color: #222;
  font-size: 14px;
  font-weight: 300;
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

.stylesheet:first-child {
  margin-top: 0;
}

.stylesheet--active button.stylesheet__toggle {
  background-color: var(--green);
}

.stylesheet__url {
  overflow: hidden;
  text-overflow: ellipsis;
}

.stylesheet__actions {
  display: flex;
  justify-content: space-between;
}

.stylesheet button {
  width: 30px;
  height: 30px;
  background-color: var(--gray);
  color: #fff;
  border-radius: 2px;
  margin-left: 10px;
  position: relative;
  border: transparent;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  outline: 0;
  cursor: pointer;
  box-shadow: none;
}

.stylesheet button:hover {
  background-color: var(--gray-shade-1);
}

.stylesheet--active button.stylesheet__toggle:hover {
  background-color: var(--green-shade-1);
}

.stylesheet button:active {
  box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.3);
}

.stylesheet button:first-child {
  margin-left: 0;
}

.stylesheet__toggle:after {
  content: '';
  display: block;
  position: relative;
  top: -2px;
  transform: rotate(-45deg);
  border-left: 3px solid;
  border-bottom: 3px solid;
  height: 6px;
  width: 14px;
}

.stylesheet button.stylesheet__delete {
  background-color: var(--red);
}

.stylesheet button.stylesheet__delete:hover {
  background-color: var(--red-shade-1);
}

.stylesheet__delete:after {
  content: '';
  display: block;
  position: absolute;
  transform: rotate(-45deg);
  width: 3px;
  height: 15px;
  background-color: #fff;
}

.stylesheet__delete:before {
  content: '';
  display: block;
  position: absolute;
  transform: rotate(45deg);
  width: 3px;
  height: 15px;
  background-color: #fff;
}

